--- a/src/react-searchbox.css
+++ b/src/react-searchbox.css
@@ -46,7 +46,7 @@
 /***** SugestionList ******/
 /**************************/
 .SuggestionList {
-  display: none;
+  display: block;
   list-style-type: none;
   margin: 0;
   padding: 0;
@@ -59,19 +59,21 @@
   background-color: white;
 }
 
-.SuggestionList__backdrop {
+.SuggestionList:empty { border: none; }
+
+.SuggestionListWrapper:before {
+  content: '';
+  width: 100%;
+  height: 100%;
+  background: #000;
+  opacity: .5;
+  display: block;
   position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
   z-index: 10;
-  background-color: rgba(0, 0, 0, .5);
+  left: 0;
+  top: 0;
 }
 
-.SuggestionList--open {
-  display: block;
-}
 /**************************/
 /****** Suggestion ********/
 /**************************/
