--- a/src/react-searchbox.css
+++ b/src/react-searchbox.css
@@ -42,6 +42,31 @@
   padding-left: 50px;
 }
 
+
+.SearchBox__prevSearch {
+  position: absolute;
+  z-index: 11;
+  background-color: white;
+  border: 3px solid #003d50;
+}
+
+.SearchBox__prevSearchTerm svg {
+  position: absolute;
+  left: 15px;
+}
+
+.SearchBox__prevSearchTerm {
+  position: relative;
+  padding: 0px 45px;
+  text-align: left;
+  min-width: 300px;
+  height: 45px;
+  border: none;
+  background: none;
+  font-weight: bold;
+  color: #666;
+}
+
 /**************************/
 /***** SugestionList ******/
 /**************************/
